--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "figma:connect": "npx figma connect publish",
     "figma:parse": "npx figma connect parse",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_6b3daf1a35c653a"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -62,28 +63,29 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@figma/code-connect": "^1.3.12",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-onboarding": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/nextjs-vite": "^10.1.10",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
+    "chromatic": "^13.3.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-storybook": "^10.1.10",
+    "playwright": "^1.57.0",
+    "storybook": "^10.1.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "storybook": "^10.1.10",
-    "@storybook/nextjs-vite": "^10.1.10",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.10",
-    "@storybook/addon-a11y": "^10.1.10",
-    "@storybook/addon-docs": "^10.1.10",
-    "@storybook/addon-onboarding": "^10.1.10",
     "vite": "^7.3.0",
-    "eslint-plugin-storybook": "^10.1.10",
-    "vitest": "^4.0.16",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.16",
-    "@vitest/coverage-v8": "^4.0.16"
+    "vitest": "^4.0.16"
   }
 }
