--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-config-next": "16.1.1",
     "eslint-plugin-storybook": "^10.1.10",
     "playwright": "^1.57.0",
+    "shadcn": "^3.6.2",
     "storybook": "^10.1.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
